tests/NormalTests/paczka1/fuzzy1/18767877.err
Error in line 1: A372 A483 90,6
Error in line 5: IuDTjSq S993 12,4
Error in line 12: IuDTjSq A476 28,8
Error in line 25: IuDTjSq A372 64,7
